@startuml GatewayComponent
' GatewayComponent.puml (가이드 준수)

package "Interface Layer" {
  interface IApiGatewayEntry
  interface IApiGatewayManagement

  component GatewayController
  component GatewayManagementController
  
  IApiGatewayEntry -- GatewayController
  IApiGatewayManagement -- GatewayManagementController
}

package "Business Layer" {
  interface IRequestRoutingService
  interface ISecurityService
  interface IServiceDiscoveryService
  interface ILoadBalancingService
  
  component RequestRouter
  component SecurityManager
  component ServiceDiscoveryManager
  component LoadBalancer
  
  interface IAuthenticationService
  interface IAuthorizationService
  interface IRequestSignatureVerifier
  
  component AuthenticationManager
  component AuthorizationManager
  component RequestSignatureVerifier
  
  ' Service implementations
  IRequestRoutingService -- RequestRouter
  ISecurityService -- SecurityManager
  IServiceDiscoveryService -- ServiceDiscoveryManager
  ILoadBalancingService -- LoadBalancer
  
  IAuthenticationService -- AuthenticationManager
  IAuthorizationService -- AuthorizationManager
  IRequestSignatureVerifier -- RequestSignatureVerifier
  
  ' Business layer internal relationships
  RequestRouter ..( ISecurityService : <<Local>>
  RequestRouter ..( IServiceDiscoveryService : <<Local>>
  RequestRouter ..( ILoadBalancingService : <<Local>>
  
  SecurityManager ..( IAuthenticationService : <<Local>>
  SecurityManager ..( IAuthorizationService : <<Local>>
  SecurityManager ..( IRequestSignatureVerifier : <<Local>>
}

package "System Interface Layer" {
  interface IServiceRegistry
  interface IAuthenticationClient
  interface IAuthorizationClient
  interface IMessagePublisherService
  interface ICircuitBreaker
  interface IRateLimiter
  
  component EurekaServiceRegistry
  component AuthenticationClientAdapter
  component AuthorizationClientAdapter
  component RabbitMQAdapter
  component ResilientCircuitBreaker
  component ResilientRateLimiter
  
  IServiceRegistry -- EurekaServiceRegistry
  IAuthenticationClient -- AuthenticationClientAdapter
  IAuthorizationClient -- AuthorizationClientAdapter
  IMessagePublisherService -- RabbitMQAdapter
  ICircuitBreaker -- ResilientCircuitBreaker
  IRateLimiter -- ResilientRateLimiter
}

' 패키지 외부 연결
' Interface Layer -> Business Layer
GatewayController ..( IRequestRoutingService : <<HTTP>>
GatewayManagementController ..( IServiceDiscoveryService : <<HTTP>>

' Business Layer -> System Interface Layer
ServiceDiscoveryManager ..( IServiceRegistry : <<Local>>
LoadBalancer ..( ICircuitBreaker : <<Local>>
LoadBalancer ..( IRateLimiter : <<Local>>
AuthenticationManager ..( IAuthenticationClient : <<gRPC>>
AuthorizationManager ..( IAuthorizationClient : <<gRPC>>
RequestRouter ..( IMessagePublisherService : <<RabbitMQ>>
SecurityManager ..( IMessagePublisherService : <<RabbitMQ>>

@enduml
